@@ -1,4 +1,4 @@
-doc_DATA= libumwsu.3 umwscan.1
+doc_DATA= libumwsu.3 umwscan.1 libumwsu.3.html umwscan.1.html
 
 ASCIIDOCFLAGS=-a data-uri -a icons -b html5
 A2XFLAGS=--doctype manpage --format manpage -v -v
@@ -6,8 +6,7 @@ A2XFLAGS=--doctype manpage --format manpage -v -v
 %: $(srcdir)/%.txt
 	$(A2X) $(A2XFLAGS) --destination-dir=$(top_builddir)/doc/man/fr $(srcdir)/$*.txt
 
+%.html: $(srcdir)/%.txt
+	$(ASCIIDOC) $(ASCIIDOCFLAGS) -o $*.html $(srcdir)/$*.txt
+
 EXTRA_DIST=libumwsu.3.txt umwscan.1.txt
-
-
-
-
