@@ -1,1 +1,5 @@
-SUBDIRS=src 
+if COND_DOC
+OPT_DOC_DIR=doc
+endif
+
+SUBDIRS=src $(OPT_DOC_DIR)
