@@ -1,11 +1,15 @@
-doc_DATA=umwd.1
+doc_DATA=umwd.1 umwd.1.html
 
 ASCIIDOCFLAGS=-a data-uri -a icons -b html5
 A2XFLAGS=--doctype manpage --format manpage -v -v
 
-%.1: $(srcdir)/%.1.txt
-	$(A2X) $(A2XFLAGS) --destination-dir=$(top_builddir)/doc/man/fr $(srcdir)/$*.1.txt
+%: $(srcdir)/%.txt
+	$(A2X) $(A2XFLAGS) --destination-dir=$(top_builddir)/doc/man/fr $(srcdir)/$*.txt
+
+%.html: $(srcdir)/%.txt
+	$(ASCIIDOC) $(ASCIIDOCFLAGS) -o $*.html $(srcdir)/$*.txt
 
 EXTRA_DIST=umwd.1.txt
+
 
 
